--- a/style.css
+++ b/style.css
@@ -112,3 +112,45 @@ footer > a {
     transition: color 0.5s linear, box-shadow 0.5s ease-in;
 }
 
+@keyframes fireworks {
+    0% {
+        opacity: 0;
+        transform: scale(0);
+    }
+    50% {
+        opacity: 1;
+        transform: scale(1.5);
+    }
+    100% {
+        opacity: 0;
+        transform: scale(0);
+    }
+}
+
+
+.firework {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: #ff5e62;
+    animation: fireworks 1s ease-out forwards;
+    box-shadow: 0 0 30px rgba(255, 94, 98, 0.8);
+    z-index: 10;
+}
+
+.firework::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 10px;
+    height: 10px;
+    background-color: #ff5e62;
+    border-radius: 50%;
+    animation: fireworks 1s ease-out forwards;
+}
