--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 :root {
     --theme-color: #285685;
-    --font-color:rgb(177, 82, 180);
+    --font-color: rgb(177, 82, 180);
     --shade1: rgba(242, 38, 19, 0.5);
     --shade2: rgba(0, 255, 255, 0.5);
 }
+
 /* Add some style for the response buttons */
 .response-container {
     position: absolute;
@@ -14,6 +15,7 @@
     color: var(--font-color);
     font-family: 'Megrim', sans-serif;
     font-size: 1.5em;
+    z-index: 1;
 }
 
 .buttons {
@@ -38,7 +40,6 @@
     background-color: #1e4e75;
 }
 
-
 /* Center the "Love Letter" button */
 .center-btn {
     position: absolute;
@@ -60,12 +61,11 @@
 .hidden {
     display: none;
 }
-  
+
 body {
     background-color: black;
     font-family: Chaucer;
     color: var(--font-color);
-  
     display: flex;
     justify-content: center;
 }
@@ -107,7 +107,6 @@ footer > a {
     font-size: 110%;
     text-decoration: none;
     padding: 5px 20px;
-  
     border: 3px solid var(--font-color);
     transition: color 0.5s linear, box-shadow 0.5s ease-in;
 }
@@ -126,7 +125,6 @@ footer > a {
         transform: scale(0);
     }
 }
-
 
 .firework {
     position: absolute;
@@ -153,4 +151,21 @@ footer > a {
     background-color: #ff5e62;
     border-radius: 50%;
     animation: fireworks 1s ease-out forwards;
+}
+
+/* Mobile Styles */
+@media screen and (max-width: 768px) {
+    .textCont {
+        width: 90%;
+        font-size: 120%;
+    }
+
+    .response-container {
+        font-size: 1.2em;
+    }
+
+    .center-btn {
+        font-size: 1.5em;
+        padding: 20px 40px;
+    }
 }
